document changes